[gd_scene load_steps=10 format=3 uid="uid://plp5688c0gsw"]

[ext_resource type="Script" path="res://UI/intro_scene.gd" id="1_cay41"]
[ext_resource type="Texture2D" uid="uid://85kyihqoo61m" path="res://UI/ROUGH_INTRO_SLIDE_ONE-01.jpg" id="2_00vrg"]
[ext_resource type="PackedScene" uid="uid://0xi7fk137lxy" path="res://Dialogue/Helpers/actionable.tscn" id="3_oh4v7"]
[ext_resource type="Resource" uid="uid://bhy84am8vom66" path="res://Dialogue/Dialogue/dialogue.dialogue" id="4_uxwdy"]
[ext_resource type="Texture2D" uid="uid://b6qk87pt7ugxh" path="res://UI/intro_slide_2.png" id="5_dxu2u"]

[sub_resource type="Animation" id="Animation_xlfh5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scene1/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-612, -25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scene2/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-655, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scene1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Scene2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bsbs8"]
resource_name = "scene_1"
length = 6.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_scene_2"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scene1/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-612, -25), Vector2(0, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scene2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Scene1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lx375"]
resource_name = "scene_2"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scene2/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-655, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scene1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scene2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbphp"]
_data = {
"RESET": SubResource("Animation_xlfh5"),
"scene_1": SubResource("Animation_bsbs8"),
"scene_2": SubResource("Animation_lx375")
}

[node name="IntroScene" type="Node2D"]
script = ExtResource("1_cay41")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbphp")
}

[node name="Scene1" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Scene1"]
position = Vector2(-612, -25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_00vrg")
centered = false

[node name="Scene2" type="Node2D" parent="."]
visible = false

[node name="Actionable" parent="Scene2" instance=ExtResource("3_oh4v7")]
dialogue_resource = ExtResource("4_uxwdy")
dialogue_start = "intro_cutscene"

[node name="Sprite2D" type="Sprite2D" parent="Scene2"]
position = Vector2(-655, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_dxu2u")
centered = false

[node name="InputDelayTimer" type="Timer" parent="."]

[connection signal="timeout" from="InputDelayTimer" to="." method="_on_input_delay_timer_timeout"]
